[package]
name = "console-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
anyhow = "1.0"
async-trait = "0.1.36"
async-std = { version = "1.9.0" , features = ["attributes"]}
postage = "0.4.1"
lifeline = { version = "0.6" }
bus = { path = "../../bus" }
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }